objects/ExpenseMember__c.object
<CustomObject>
    <fields>
        <fullName>Contribution_Amount__c</fullName>
        <label>Contribution Amount</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Email_Id__c</fullName>
        <label>Email Id</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Expense__c</fullName>
        <label>Expense</label>
        <referenceTo>Expense__c</referenceTo>
        <relationshipLabel>ExpenseMember</relationshipLabel>
        <relationshipName>ExpenseMember</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Member__c</fullName>
        <label>Member</label>
        <referenceTo>Member__c</referenceTo>
        <relationshipLabel>ExpenseMember</relationshipLabel>
        <relationshipName>Member</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>memberemail__c</fullName>
        <formula>Member__r.Email_Id__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>memberemail</label>
        <type>Text</type>
    </fields>
    <label>ExpenseMember</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>ExpenseMember Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ExpenseMember</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>expensememberuler</fullName>
        <active>true</active>
        <errorConditionFormula>Expense__r.ExpenseCalculation__c +  Contribution_Amount__c  &gt;Expense__r.Amount__c</errorConditionFormula>
        <errorMessage>sum of contribution amount should not more than total amount</errorMessage>
    </validationRules>
</CustomObject>